# sandbox-cmake-cpp-libanimals

./: .gitmodules  CMakeLists.txt  README.dev.md  README.md
.github/workflows/: ls-lint.yml
cmake/: googletest.cmake  testing.cmake
libanimals/: animal.hpp  cat.cpp  cat.hpp  cat.test.cpp
